fixed bug of dropdown button on iphone

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,6 +75,7 @@ ul {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    top: 50px
 }
 
 /* Links inside the dropdown */
@@ -94,15 +95,20 @@ ul {
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content,
+.dropdown:active .dropdown-content,
+.dropbtn:hover .dropdown-content,
+.dropbtn:active .dropdown-content,
+.dropdown-icon:hover .dropdown-content,
+.dropdown-icon:active .dropdown-content {
     display: block;
 }
 
 
 /* Hiding title when opening drop down menu*/
-.dropdown:hover #menu-title-2 {
+/* .dropdown:hover #menu-title-2 {
     display: none;
-}
+} */
 
 /* Main */
 main {
